--- a/Examples/example_Refactored/program/program.vcxproj.filters
+++ b/Examples/example_Refactored/program/program.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="MotorModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TrainingData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ForwardKinematics.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MotorModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TrainingData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
